// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfile should disable save when new password too weak 1`] = `
.c9 {
  width: 100%;
  margin-right: 16px;
}

.c10 {
  font-weight: bold;
  font-size: 12px;
  line-height: 15px;
}

.c11 {
  color: #f44336;
  font-size: 16px;
  line-height: 20px;
  margin-top: 16px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 26px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  margin-bottom: 42px;
}

.c4 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 560px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c1 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 280px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c2 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.c3 {
  word-wrap: break-word;
}

.c5 {
  font-weight: bold;
  font-size: 18px;
  line-height: 23px;
  margin-bottom: 8px;
  margin-top: 0px;
}

.c8 {
  font-weight: bold;
  font-size: 18px;
  line-height: 23px;
  margin-bottom: 8px;
  margin-top: 24px;
}

.c7 {
  width: 480px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div
  style={
    {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0 container"
  >
    <div
      className="c1"
    >
      <span
        style={
          {
            "background": "none",
            "border": 0,
            "boxSizing": "border-box",
            "display": "inline-block",
            "height": "initial",
            "margin": 0,
            "maxWidth": "100%",
            "opacity": 1,
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "width": "initial",
          }
        }
      >
        <span
          style={
            {
              "background": "none",
              "border": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": "initial",
              "margin": 0,
              "maxWidth": "100%",
              "opacity": 1,
              "padding": 0,
              "width": "initial",
            }
          }
        >
          <img
            alt=""
            aria-hidden={true}
            src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27160%27%20height=%27160%27/%3e"
            style={
              {
                "background": "none",
                "border": 0,
                "display": "block",
                "height": "initial",
                "margin": 0,
                "maxWidth": "100%",
                "opacity": 1,
                "padding": 0,
                "width": "initial",
              }
            }
          />
        </span>
        <img
          alt="my-image"
          className="user_img"
          data-nimg="intrinsic"
          decoding="async"
          onError={[Function]}
          onLoad={[Function]}
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style={
            {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "contain",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
        <noscript>
          <img
            alt="my-image"
            className="user_img"
            data-nimg="intrinsic"
            decoding="async"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=384&q=75"
            srcSet="/_next/image?url=%2Fimg.jpg&w=256&q=75 1x, /_next/image?url=%2Fimg.jpg&w=384&q=75 2x"
            style={
              {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "objectFit": "contain",
                "objectPosition": undefined,
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 0,
              }
            }
          />
        </noscript>
      </span>
      <div
        className="c2"
      >
        username
      </div>
      <button
        className="btn dark position-relative mb-16"
      >
        <span
          className="mr-10"
        >
          <i
            dangerouslySetInnerHTML={
              {
                "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-upload-outline" fill="#fff"><g data-name="Layer 2"><g data-name="upload"><rect width="24" height="24" transform="rotate(180 12 12)" opacity="0"/><rect x="4" y="4" width="16" height="2" rx="1" ry="1" transform="rotate(180 12 5)"/><rect x="17" y="5" width="4" height="2" rx="1" ry="1" transform="rotate(90 19 6)"/><rect x="3" y="5" width="4" height="2" rx="1" ry="1" transform="rotate(90 5 6)"/><path d="M8 14a1 1 0 0 1-.8-.4 1 1 0 0 1 .2-1.4l4-3a1 1 0 0 1 1.18 0l4 2.82a1 1 0 0 1 .24 1.39 1 1 0 0 1-1.4.24L12 11.24 8.6 13.8a1 1 0 0 1-.6.2z"/><path d="M12 21a1 1 0 0 1-1-1v-8a1 1 0 0 1 2 0v8a1 1 0 0 1-1 1z"/></g></g></svg>",
              }
            }
          />
        </span>
        <input
          accept="image/*"
          className="form-control-file"
          id="picture"
          name="structure"
          onChange={[Function]}
          type="file"
        />
        UserProfile.Modifier ma photo
      </button>
      <div
        className="c3"
      >
        UserProfile.photoUsage
      </div>
    </div>
    <div
      className="c4"
    >
      <div>
        <div
          className="c5"
        >
          UserProfile.votre pseudo
        </div>
        <div
          className="c6"
        >
          <div
            className="c7"
          >
            <div
              className="input mb-10 input-group"
            >
              <div
                className="prepend input-group-prepend"
              >
                <span>
                  <i
                    dangerouslySetInnerHTML={
                      {
                        "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-person-outline" fill="#212121"><g data-name="Layer 2"><g data-name="person"><rect width="24" height="24" opacity="0"/><path d="M12 11a4 4 0 1 0-4-4 4 4 0 0 0 4 4zm0-6a2 2 0 1 1-2 2 2 2 0 0 1 2-2z"/><path d="M12 13a7 7 0 0 0-7 7 1 1 0 0 0 2 0 5 5 0 0 1 10 0 1 1 0 0 0 2 0 7 7 0 0 0-7-7z"/></g></g></svg>",
                      }
                    }
                  />
                </span>
              </div>
              <input
                autoFocus={false}
                className="has_prepend new_size form-control"
                id="username"
                onChange={[Function]}
                readOnly={false}
                style={{}}
                type="text"
                value="username"
              />
            </div>
          </div>
          <div>
            <button
              className="btn validate-light ml-8"
              data-test-id="test-save-pseudo"
              disabled={true}
              onClick={[Function]}
            >
              <span
                className="mr-10"
              >
                <i
                  dangerouslySetInnerHTML={
                    {
                      "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-save-outline" fill="#fff"><g data-name="Layer 2"><g data-name="save"><rect width="24" height="24" opacity="0"/><path d="M20.12 8.71l-4.83-4.83A3 3 0 0 0 13.17 3H6a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3h12a3 3 0 0 0 3-3v-7.17a3 3 0 0 0-.88-2.12zM10 19v-2h4v2zm9-1a1 1 0 0 1-1 1h-2v-3a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v3H6a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h2v5a1 1 0 0 0 1 1h4a1 1 0 0 0 0-2h-3V5h3.17a1.05 1.05 0 0 1 .71.29l4.83 4.83a1 1 0 0 1 .29.71z"/></g></g></svg>",
                    }
                  }
                />
              </span>
              UserProfile.Enregistrer
            </button>
          </div>
        </div>
        <div
          className="c3"
        >
          UserProfile.pseudoExplication
        </div>
      </div>
      <div>
        <div
          className="c8"
        >
          Register.Votre email
        </div>
        <div
          className="c6"
        >
          <div
            className="c7"
          >
            <div
              className="input mb-10 input-group"
            >
              <div
                className="prepend input-group-prepend"
              >
                <span>
                  <i
                    dangerouslySetInnerHTML={
                      {
                        "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-email-outline" fill="#212121"><g data-name="Layer 2"><g data-name="email"><rect width="24" height="24" opacity="0"/><path d="M19 4H5a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h14a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3zm-.67 2L12 10.75 5.67 6zM19 18H5a1 1 0 0 1-1-1V7.25l7.4 5.55a1 1 0 0 0 .6.2 1 1 0 0 0 .6-.2L20 7.25V17a1 1 0 0 1-1 1z"/></g></g></svg>",
                      }
                    }
                  />
                </span>
              </div>
              <input
                autoFocus={false}
                className="has_prepend new_size form-control"
                id="email"
                onChange={[Function]}
                placeholder="Register.Renseignez votre adresse email"
                readOnly={false}
                style={{}}
                type="text"
                value="email@gmail.com"
              />
            </div>
          </div>
          <div>
            <button
              className="btn validate-light ml-8"
              data-test-id="test-save-email"
              disabled={true}
              onClick={[Function]}
            >
              <span
                className="mr-10"
              >
                <i
                  dangerouslySetInnerHTML={
                    {
                      "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-save-outline" fill="#fff"><g data-name="Layer 2"><g data-name="save"><rect width="24" height="24" opacity="0"/><path d="M20.12 8.71l-4.83-4.83A3 3 0 0 0 13.17 3H6a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3h12a3 3 0 0 0 3-3v-7.17a3 3 0 0 0-.88-2.12zM10 19v-2h4v2zm9-1a1 1 0 0 1-1 1h-2v-3a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v3H6a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h2v5a1 1 0 0 0 1 1h4a1 1 0 0 0 0-2h-3V5h3.17a1.05 1.05 0 0 1 .71.29l4.83 4.83a1 1 0 0 1 .29.71z"/></g></g></svg>",
                    }
                  }
                />
              </span>
              UserProfile.Enregistrer
            </button>
          </div>
        </div>
        <div
          className="c3"
        >
          UserProfile.emailExplication
        </div>
      </div>
      <div
        className="c8"
      >
        UserProfile.Votre mot de passe
      </div>
      <div
        className="c7"
      >
        <div
          className="input mb-10 input-group"
        >
          <div
            className="prepend input-group-prepend"
          >
            <span>
              <i
                dangerouslySetInnerHTML={
                  {
                    "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-lock-outline" fill="#212121"><g data-name="Layer 2"><g data-name="lock"><rect width="24" height="24" opacity="0"/><path d="M17 8h-1V6.11a4 4 0 1 0-8 0V8H7a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3v-8a3 3 0 0 0-3-3zm-7-1.89A2.06 2.06 0 0 1 12 4a2.06 2.06 0 0 1 2 2.11V8h-4zM18 19a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1v-8a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1z"/><path d="M12 12a3 3 0 1 0 3 3 3 3 0 0 0-3-3zm0 4a1 1 0 1 1 1-1 1 1 0 0 1-1 1z"/></g></g></svg>",
                  }
                }
              />
            </span>
          </div>
          <input
            autoFocus={true}
            className="password-input has_prepend new_size form-control"
            id="current-password"
            onChange={[Function]}
            placeholder="Votre mot de passe actuel"
            readOnly={false}
            style={
              {
                "width": 70,
              }
            }
            type="password"
            value="current"
          />
          <div
            className="append input-group-append"
            onClick={[Function]}
          >
            <span>
              <i
                dangerouslySetInnerHTML={
                  {
                    "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-eye-outline" fill="#212121"><g data-name="Layer 2"><g data-name="eye"><rect width="24" height="24" opacity="0"/><path d="M21.87 11.5c-.64-1.11-4.16-6.68-10.14-6.5-5.53.14-8.73 5-9.6 6.5a1 1 0 0 0 0 1c.63 1.09 4 6.5 9.89 6.5h.25c5.53-.14 8.74-5 9.6-6.5a1 1 0 0 0 0-1zM12.22 17c-4.31.1-7.12-3.59-8-5 1-1.61 3.61-4.9 7.61-5 4.29-.11 7.11 3.59 8 5-1.03 1.61-3.61 4.9-7.61 5z"/><path d="M12 8.5a3.5 3.5 0 1 0 3.5 3.5A3.5 3.5 0 0 0 12 8.5zm0 5a1.5 1.5 0 1 1 1.5-1.5 1.5 1.5 0 0 1-1.5 1.5z"/></g></g></svg>",
                  }
                }
              />
            </span>
          </div>
        </div>
      </div>
      <div
        className="c7"
      >
        <div
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
            }
          }
        >
          <div
            style={
              {
                "marginTop": "10px",
                "width": "480px",
              }
            }
          >
            <div
              className="input mb-10 input-group"
            >
              <div
                className="prepend input-group-prepend"
              >
                <span>
                  <i
                    dangerouslySetInnerHTML={
                      {
                        "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-lock-outline" fill="#212121"><g data-name="Layer 2"><g data-name="lock"><rect width="24" height="24" opacity="0"/><path d="M17 8h-1V6.11a4 4 0 1 0-8 0V8H7a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3v-8a3 3 0 0 0-3-3zm-7-1.89A2.06 2.06 0 0 1 12 4a2.06 2.06 0 0 1 2 2.11V8h-4zM18 19a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1v-8a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1z"/><path d="M12 12a3 3 0 1 0 3 3 3 3 0 0 0-3-3zm0 4a1 1 0 1 1 1-1 1 1 0 0 1-1 1z"/></g></g></svg>",
                      }
                    }
                  />
                </span>
              </div>
              <input
                autoComplete="new-password"
                autoFocus={false}
                className="password-input has_prepend new_size form-control"
                id="new-password"
                onChange={[Function]}
                placeholder="UserProfile.Votre nouveau mot de passe"
                readOnly={false}
                style={{}}
                type="password"
              />
              <div
                className="append input-group-append"
                onClick={[Function]}
              >
                <span>
                  <i
                    dangerouslySetInnerHTML={
                      {
                        "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-eye-outline" fill="#212121"><g data-name="Layer 2"><g data-name="eye"><rect width="24" height="24" opacity="0"/><path d="M21.87 11.5c-.64-1.11-4.16-6.68-10.14-6.5-5.53.14-8.73 5-9.6 6.5a1 1 0 0 0 0 1c.63 1.09 4 6.5 9.89 6.5h.25c5.53-.14 8.74-5 9.6-6.5a1 1 0 0 0 0-1zM12.22 17c-4.31.1-7.12-3.59-8-5 1-1.61 3.61-4.9 7.61-5 4.29-.11 7.11 3.59 8 5-1.03 1.61-3.61 4.9-7.61 5z"/><path d="M12 8.5a3.5 3.5 0 1 0 3.5 3.5A3.5 3.5 0 0 0 12 8.5zm0 5a1.5 1.5 0 1 1 1.5-1.5 1.5 1.5 0 0 1-1.5 1.5z"/></g></g></svg>",
                      }
                    }
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "marginTop": "16px",
            }
          }
        >
          <div
            className="c9"
          >
            <div
              className="progress"
              style={{}}
            >
              <div
                aria-valuemax={100}
                aria-valuemin={0}
                aria-valuenow={9.09090909090909}
                className="progress-bar bg-danger"
                role="progressbar"
                style={
                  {
                    "width": "9.09090909090909%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="c10"
          >
            Register.Faible
          </div>
        </div>
        <div
          className="c11"
        >
          <b>
            Register.Mot de passe trop faible
          </b>
        </div>
      </div>
      <div
        style={
          {
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "marginTop": "16px",
          }
        }
      >
        <button
          className="btn validate-light"
          data-test-id="test-save-password"
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="mr-10"
          >
            <i
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-save-outline" fill="#fff"><g data-name="Layer 2"><g data-name="save"><rect width="24" height="24" opacity="0"/><path d="M20.12 8.71l-4.83-4.83A3 3 0 0 0 13.17 3H6a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3h12a3 3 0 0 0 3-3v-7.17a3 3 0 0 0-.88-2.12zM10 19v-2h4v2zm9-1a1 1 0 0 1-1 1h-2v-3a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v3H6a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h2v5a1 1 0 0 0 1 1h4a1 1 0 0 0 0-2h-3V5h3.17a1.05 1.05 0 0 1 .71.29l4.83 4.83a1 1 0 0 1 .29.71z"/></g></g></svg>",
                }
              }
            />
          </span>
          UserProfile.Enregistrer
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserProfile should render correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 26px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  margin-bottom: 42px;
}

.c4 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 560px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c1 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 280px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c2 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.c3 {
  word-wrap: break-word;
}

.c5 {
  font-weight: bold;
  font-size: 18px;
  line-height: 23px;
  margin-bottom: 8px;
  margin-top: 0px;
}

.c8 {
  font-weight: bold;
  font-size: 18px;
  line-height: 23px;
  margin-bottom: 8px;
  margin-top: 24px;
}

.c7 {
  width: 480px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div
  style={
    {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0 container"
  >
    <div
      className="c1"
    >
      <span
        style={
          {
            "background": "none",
            "border": 0,
            "boxSizing": "border-box",
            "display": "inline-block",
            "height": "initial",
            "margin": 0,
            "maxWidth": "100%",
            "opacity": 1,
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "width": "initial",
          }
        }
      >
        <span
          style={
            {
              "background": "none",
              "border": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": "initial",
              "margin": 0,
              "maxWidth": "100%",
              "opacity": 1,
              "padding": 0,
              "width": "initial",
            }
          }
        >
          <img
            alt=""
            aria-hidden={true}
            src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27160%27%20height=%27160%27/%3e"
            style={
              {
                "background": "none",
                "border": 0,
                "display": "block",
                "height": "initial",
                "margin": 0,
                "maxWidth": "100%",
                "opacity": 1,
                "padding": 0,
                "width": "initial",
              }
            }
          />
        </span>
        <img
          alt="my-image"
          className="user_img"
          data-nimg="intrinsic"
          decoding="async"
          onError={[Function]}
          onLoad={[Function]}
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style={
            {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "contain",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
        <noscript>
          <img
            alt="my-image"
            className="user_img"
            data-nimg="intrinsic"
            decoding="async"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=384&q=75"
            srcSet="/_next/image?url=%2Fimg.jpg&w=256&q=75 1x, /_next/image?url=%2Fimg.jpg&w=384&q=75 2x"
            style={
              {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "objectFit": "contain",
                "objectPosition": undefined,
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 0,
              }
            }
          />
        </noscript>
      </span>
      <div
        className="c2"
      >
        username
      </div>
      <button
        className="btn dark position-relative mb-16"
      >
        <span
          className="mr-10"
        >
          <i
            dangerouslySetInnerHTML={
              {
                "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-upload-outline" fill="#fff"><g data-name="Layer 2"><g data-name="upload"><rect width="24" height="24" transform="rotate(180 12 12)" opacity="0"/><rect x="4" y="4" width="16" height="2" rx="1" ry="1" transform="rotate(180 12 5)"/><rect x="17" y="5" width="4" height="2" rx="1" ry="1" transform="rotate(90 19 6)"/><rect x="3" y="5" width="4" height="2" rx="1" ry="1" transform="rotate(90 5 6)"/><path d="M8 14a1 1 0 0 1-.8-.4 1 1 0 0 1 .2-1.4l4-3a1 1 0 0 1 1.18 0l4 2.82a1 1 0 0 1 .24 1.39 1 1 0 0 1-1.4.24L12 11.24 8.6 13.8a1 1 0 0 1-.6.2z"/><path d="M12 21a1 1 0 0 1-1-1v-8a1 1 0 0 1 2 0v8a1 1 0 0 1-1 1z"/></g></g></svg>",
              }
            }
          />
        </span>
        <input
          accept="image/*"
          className="form-control-file"
          id="picture"
          name="structure"
          onChange={[Function]}
          type="file"
        />
        UserProfile.Modifier ma photo
      </button>
      <div
        className="c3"
      >
        UserProfile.photoUsage
      </div>
    </div>
    <div
      className="c4"
    >
      <div>
        <div
          className="c5"
        >
          UserProfile.votre pseudo
        </div>
        <div
          className="c6"
        >
          <div
            className="c7"
          >
            <div
              className="input mb-10 input-group"
            >
              <div
                className="prepend input-group-prepend"
              >
                <span>
                  <i
                    dangerouslySetInnerHTML={
                      {
                        "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-person-outline" fill="#212121"><g data-name="Layer 2"><g data-name="person"><rect width="24" height="24" opacity="0"/><path d="M12 11a4 4 0 1 0-4-4 4 4 0 0 0 4 4zm0-6a2 2 0 1 1-2 2 2 2 0 0 1 2-2z"/><path d="M12 13a7 7 0 0 0-7 7 1 1 0 0 0 2 0 5 5 0 0 1 10 0 1 1 0 0 0 2 0 7 7 0 0 0-7-7z"/></g></g></svg>",
                      }
                    }
                  />
                </span>
              </div>
              <input
                autoFocus={false}
                className="has_prepend new_size form-control"
                id="username"
                onChange={[Function]}
                readOnly={false}
                style={{}}
                type="text"
                value="username"
              />
            </div>
          </div>
          <div>
            <button
              className="btn validate-light ml-8"
              data-test-id="test-save-pseudo"
              disabled={true}
              onClick={[Function]}
            >
              <span
                className="mr-10"
              >
                <i
                  dangerouslySetInnerHTML={
                    {
                      "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-save-outline" fill="#fff"><g data-name="Layer 2"><g data-name="save"><rect width="24" height="24" opacity="0"/><path d="M20.12 8.71l-4.83-4.83A3 3 0 0 0 13.17 3H6a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3h12a3 3 0 0 0 3-3v-7.17a3 3 0 0 0-.88-2.12zM10 19v-2h4v2zm9-1a1 1 0 0 1-1 1h-2v-3a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v3H6a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h2v5a1 1 0 0 0 1 1h4a1 1 0 0 0 0-2h-3V5h3.17a1.05 1.05 0 0 1 .71.29l4.83 4.83a1 1 0 0 1 .29.71z"/></g></g></svg>",
                    }
                  }
                />
              </span>
              UserProfile.Enregistrer
            </button>
          </div>
        </div>
        <div
          className="c3"
        >
          UserProfile.pseudoExplication
        </div>
      </div>
      <div>
        <div
          className="c8"
        >
          Register.Votre email
        </div>
        <div
          className="c6"
        >
          <div
            className="c7"
          >
            <div
              className="input mb-10 input-group"
            >
              <div
                className="prepend input-group-prepend"
              >
                <span>
                  <i
                    dangerouslySetInnerHTML={
                      {
                        "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-email-outline" fill="#212121"><g data-name="Layer 2"><g data-name="email"><rect width="24" height="24" opacity="0"/><path d="M19 4H5a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h14a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3zm-.67 2L12 10.75 5.67 6zM19 18H5a1 1 0 0 1-1-1V7.25l7.4 5.55a1 1 0 0 0 .6.2 1 1 0 0 0 .6-.2L20 7.25V17a1 1 0 0 1-1 1z"/></g></g></svg>",
                      }
                    }
                  />
                </span>
              </div>
              <input
                autoFocus={false}
                className="has_prepend new_size form-control"
                id="email"
                onChange={[Function]}
                placeholder="Register.Renseignez votre adresse email"
                readOnly={false}
                style={{}}
                type="text"
                value="email@gmail.com"
              />
            </div>
          </div>
          <div>
            <button
              className="btn validate-light ml-8"
              data-test-id="test-save-email"
              disabled={true}
              onClick={[Function]}
            >
              <span
                className="mr-10"
              >
                <i
                  dangerouslySetInnerHTML={
                    {
                      "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-save-outline" fill="#fff"><g data-name="Layer 2"><g data-name="save"><rect width="24" height="24" opacity="0"/><path d="M20.12 8.71l-4.83-4.83A3 3 0 0 0 13.17 3H6a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3h12a3 3 0 0 0 3-3v-7.17a3 3 0 0 0-.88-2.12zM10 19v-2h4v2zm9-1a1 1 0 0 1-1 1h-2v-3a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v3H6a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h2v5a1 1 0 0 0 1 1h4a1 1 0 0 0 0-2h-3V5h3.17a1.05 1.05 0 0 1 .71.29l4.83 4.83a1 1 0 0 1 .29.71z"/></g></g></svg>",
                    }
                  }
                />
              </span>
              UserProfile.Enregistrer
            </button>
          </div>
        </div>
        <div
          className="c3"
        >
          UserProfile.emailExplication
        </div>
      </div>
      <div
        className="c8"
      >
        UserProfile.Votre mot de passe
      </div>
      <button
        className="btn dark"
        data-test-id="test-modify-password"
        onClick={[Function]}
      >
        <span
          className="mr-10"
        >
          <i
            dangerouslySetInnerHTML={
              {
                "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-edit-outline" fill="#fff"><g data-name="Layer 2"><g data-name="edit"><rect width="24" height="24" opacity="0"/><path d="M19.4 7.34L16.66 4.6A2 2 0 0 0 14 4.53l-9 9a2 2 0 0 0-.57 1.21L4 18.91a1 1 0 0 0 .29.8A1 1 0 0 0 5 20h.09l4.17-.38a2 2 0 0 0 1.21-.57l9-9a1.92 1.92 0 0 0-.07-2.71zM9.08 17.62l-3 .28.27-3L12 9.32l2.7 2.7zM16 10.68L13.32 8l1.95-2L18 8.73z"/></g></g></svg>",
              }
            }
          />
        </span>
        UserProfile.modifyPassword
      </button>
    </div>
  </div>
</div>
`;

exports[`UserProfile should render correctly when changing password 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 26px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  margin-bottom: 42px;
}

.c4 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 560px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c1 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 280px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c2 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.c3 {
  word-wrap: break-word;
}

.c5 {
  font-weight: bold;
  font-size: 18px;
  line-height: 23px;
  margin-bottom: 8px;
  margin-top: 0px;
}

.c8 {
  font-weight: bold;
  font-size: 18px;
  line-height: 23px;
  margin-bottom: 8px;
  margin-top: 24px;
}

.c7 {
  width: 480px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div
  style={
    {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0 container"
  >
    <div
      className="c1"
    >
      <span
        style={
          {
            "background": "none",
            "border": 0,
            "boxSizing": "border-box",
            "display": "inline-block",
            "height": "initial",
            "margin": 0,
            "maxWidth": "100%",
            "opacity": 1,
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "width": "initial",
          }
        }
      >
        <span
          style={
            {
              "background": "none",
              "border": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": "initial",
              "margin": 0,
              "maxWidth": "100%",
              "opacity": 1,
              "padding": 0,
              "width": "initial",
            }
          }
        >
          <img
            alt=""
            aria-hidden={true}
            src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27160%27%20height=%27160%27/%3e"
            style={
              {
                "background": "none",
                "border": 0,
                "display": "block",
                "height": "initial",
                "margin": 0,
                "maxWidth": "100%",
                "opacity": 1,
                "padding": 0,
                "width": "initial",
              }
            }
          />
        </span>
        <img
          alt="my-image"
          className="user_img"
          data-nimg="intrinsic"
          decoding="async"
          onError={[Function]}
          onLoad={[Function]}
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style={
            {
              "border": "none",
              "bottom": 0,
              "boxSizing": "border-box",
              "display": "block",
              "height": 0,
              "left": 0,
              "margin": "auto",
              "maxHeight": "100%",
              "maxWidth": "100%",
              "minHeight": "100%",
              "minWidth": "100%",
              "objectFit": "contain",
              "objectPosition": undefined,
              "padding": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": 0,
            }
          }
        />
        <noscript>
          <img
            alt="my-image"
            className="user_img"
            data-nimg="intrinsic"
            decoding="async"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=384&q=75"
            srcSet="/_next/image?url=%2Fimg.jpg&w=256&q=75 1x, /_next/image?url=%2Fimg.jpg&w=384&q=75 2x"
            style={
              {
                "border": "none",
                "bottom": 0,
                "boxSizing": "border-box",
                "display": "block",
                "height": 0,
                "left": 0,
                "margin": "auto",
                "maxHeight": "100%",
                "maxWidth": "100%",
                "minHeight": "100%",
                "minWidth": "100%",
                "objectFit": "contain",
                "objectPosition": undefined,
                "padding": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": 0,
              }
            }
          />
        </noscript>
      </span>
      <div
        className="c2"
      >
        username
      </div>
      <button
        className="btn dark position-relative mb-16"
      >
        <span
          className="mr-10"
        >
          <i
            dangerouslySetInnerHTML={
              {
                "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-upload-outline" fill="#fff"><g data-name="Layer 2"><g data-name="upload"><rect width="24" height="24" transform="rotate(180 12 12)" opacity="0"/><rect x="4" y="4" width="16" height="2" rx="1" ry="1" transform="rotate(180 12 5)"/><rect x="17" y="5" width="4" height="2" rx="1" ry="1" transform="rotate(90 19 6)"/><rect x="3" y="5" width="4" height="2" rx="1" ry="1" transform="rotate(90 5 6)"/><path d="M8 14a1 1 0 0 1-.8-.4 1 1 0 0 1 .2-1.4l4-3a1 1 0 0 1 1.18 0l4 2.82a1 1 0 0 1 .24 1.39 1 1 0 0 1-1.4.24L12 11.24 8.6 13.8a1 1 0 0 1-.6.2z"/><path d="M12 21a1 1 0 0 1-1-1v-8a1 1 0 0 1 2 0v8a1 1 0 0 1-1 1z"/></g></g></svg>",
              }
            }
          />
        </span>
        <input
          accept="image/*"
          className="form-control-file"
          id="picture"
          name="structure"
          onChange={[Function]}
          type="file"
        />
        UserProfile.Modifier ma photo
      </button>
      <div
        className="c3"
      >
        UserProfile.photoUsage
      </div>
    </div>
    <div
      className="c4"
    >
      <div>
        <div
          className="c5"
        >
          UserProfile.votre pseudo
        </div>
        <div
          className="c6"
        >
          <div
            className="c7"
          >
            <div
              className="input mb-10 input-group"
            >
              <div
                className="prepend input-group-prepend"
              >
                <span>
                  <i
                    dangerouslySetInnerHTML={
                      {
                        "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-person-outline" fill="#212121"><g data-name="Layer 2"><g data-name="person"><rect width="24" height="24" opacity="0"/><path d="M12 11a4 4 0 1 0-4-4 4 4 0 0 0 4 4zm0-6a2 2 0 1 1-2 2 2 2 0 0 1 2-2z"/><path d="M12 13a7 7 0 0 0-7 7 1 1 0 0 0 2 0 5 5 0 0 1 10 0 1 1 0 0 0 2 0 7 7 0 0 0-7-7z"/></g></g></svg>",
                      }
                    }
                  />
                </span>
              </div>
              <input
                autoFocus={false}
                className="has_prepend new_size form-control"
                id="username"
                onChange={[Function]}
                readOnly={false}
                style={{}}
                type="text"
                value="username"
              />
            </div>
          </div>
          <div>
            <button
              className="btn validate-light ml-8"
              data-test-id="test-save-pseudo"
              disabled={true}
              onClick={[Function]}
            >
              <span
                className="mr-10"
              >
                <i
                  dangerouslySetInnerHTML={
                    {
                      "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-save-outline" fill="#fff"><g data-name="Layer 2"><g data-name="save"><rect width="24" height="24" opacity="0"/><path d="M20.12 8.71l-4.83-4.83A3 3 0 0 0 13.17 3H6a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3h12a3 3 0 0 0 3-3v-7.17a3 3 0 0 0-.88-2.12zM10 19v-2h4v2zm9-1a1 1 0 0 1-1 1h-2v-3a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v3H6a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h2v5a1 1 0 0 0 1 1h4a1 1 0 0 0 0-2h-3V5h3.17a1.05 1.05 0 0 1 .71.29l4.83 4.83a1 1 0 0 1 .29.71z"/></g></g></svg>",
                    }
                  }
                />
              </span>
              UserProfile.Enregistrer
            </button>
          </div>
        </div>
        <div
          className="c3"
        >
          UserProfile.pseudoExplication
        </div>
      </div>
      <div>
        <div
          className="c8"
        >
          Register.Votre email
        </div>
        <div
          className="c6"
        >
          <div
            className="c7"
          >
            <div
              className="input mb-10 input-group"
            >
              <div
                className="prepend input-group-prepend"
              >
                <span>
                  <i
                    dangerouslySetInnerHTML={
                      {
                        "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-email-outline" fill="#212121"><g data-name="Layer 2"><g data-name="email"><rect width="24" height="24" opacity="0"/><path d="M19 4H5a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h14a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3zm-.67 2L12 10.75 5.67 6zM19 18H5a1 1 0 0 1-1-1V7.25l7.4 5.55a1 1 0 0 0 .6.2 1 1 0 0 0 .6-.2L20 7.25V17a1 1 0 0 1-1 1z"/></g></g></svg>",
                      }
                    }
                  />
                </span>
              </div>
              <input
                autoFocus={false}
                className="has_prepend new_size form-control"
                id="email"
                onChange={[Function]}
                placeholder="Register.Renseignez votre adresse email"
                readOnly={false}
                style={{}}
                type="text"
                value="email@gmail.com"
              />
            </div>
          </div>
          <div>
            <button
              className="btn validate-light ml-8"
              data-test-id="test-save-email"
              disabled={true}
              onClick={[Function]}
            >
              <span
                className="mr-10"
              >
                <i
                  dangerouslySetInnerHTML={
                    {
                      "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-save-outline" fill="#fff"><g data-name="Layer 2"><g data-name="save"><rect width="24" height="24" opacity="0"/><path d="M20.12 8.71l-4.83-4.83A3 3 0 0 0 13.17 3H6a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3h12a3 3 0 0 0 3-3v-7.17a3 3 0 0 0-.88-2.12zM10 19v-2h4v2zm9-1a1 1 0 0 1-1 1h-2v-3a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v3H6a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h2v5a1 1 0 0 0 1 1h4a1 1 0 0 0 0-2h-3V5h3.17a1.05 1.05 0 0 1 .71.29l4.83 4.83a1 1 0 0 1 .29.71z"/></g></g></svg>",
                    }
                  }
                />
              </span>
              UserProfile.Enregistrer
            </button>
          </div>
        </div>
        <div
          className="c3"
        >
          UserProfile.emailExplication
        </div>
      </div>
      <div
        className="c8"
      >
        UserProfile.Votre mot de passe
      </div>
      <div
        className="c7"
      >
        <div
          className="input mb-10 input-group"
        >
          <div
            className="prepend input-group-prepend"
          >
            <span>
              <i
                dangerouslySetInnerHTML={
                  {
                    "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-lock-outline" fill="#212121"><g data-name="Layer 2"><g data-name="lock"><rect width="24" height="24" opacity="0"/><path d="M17 8h-1V6.11a4 4 0 1 0-8 0V8H7a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3v-8a3 3 0 0 0-3-3zm-7-1.89A2.06 2.06 0 0 1 12 4a2.06 2.06 0 0 1 2 2.11V8h-4zM18 19a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1v-8a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1z"/><path d="M12 12a3 3 0 1 0 3 3 3 3 0 0 0-3-3zm0 4a1 1 0 1 1 1-1 1 1 0 0 1-1 1z"/></g></g></svg>",
                  }
                }
              />
            </span>
          </div>
          <input
            autoFocus={true}
            className="password-input has_prepend new_size form-control"
            id="current-password"
            onChange={[Function]}
            placeholder="Votre mot de passe actuel"
            readOnly={false}
            style={{}}
            type="password"
            value=""
          />
          <div
            className="append input-group-append"
            onClick={[Function]}
          >
            <span>
              <i
                dangerouslySetInnerHTML={
                  {
                    "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-eye-outline" fill="#212121"><g data-name="Layer 2"><g data-name="eye"><rect width="24" height="24" opacity="0"/><path d="M21.87 11.5c-.64-1.11-4.16-6.68-10.14-6.5-5.53.14-8.73 5-9.6 6.5a1 1 0 0 0 0 1c.63 1.09 4 6.5 9.89 6.5h.25c5.53-.14 8.74-5 9.6-6.5a1 1 0 0 0 0-1zM12.22 17c-4.31.1-7.12-3.59-8-5 1-1.61 3.61-4.9 7.61-5 4.29-.11 7.11 3.59 8 5-1.03 1.61-3.61 4.9-7.61 5z"/><path d="M12 8.5a3.5 3.5 0 1 0 3.5 3.5A3.5 3.5 0 0 0 12 8.5zm0 5a1.5 1.5 0 1 1 1.5-1.5 1.5 1.5 0 0 1-1.5 1.5z"/></g></g></svg>",
                  }
                }
              />
            </span>
          </div>
        </div>
      </div>
      <div
        className="c7"
      >
        <div
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
            }
          }
        >
          <div
            style={
              {
                "marginTop": "10px",
                "width": "480px",
              }
            }
          >
            <div
              className="input mb-10 input-group"
            >
              <div
                className="prepend input-group-prepend"
              >
                <span>
                  <i
                    dangerouslySetInnerHTML={
                      {
                        "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-lock-outline" fill="#212121"><g data-name="Layer 2"><g data-name="lock"><rect width="24" height="24" opacity="0"/><path d="M17 8h-1V6.11a4 4 0 1 0-8 0V8H7a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3v-8a3 3 0 0 0-3-3zm-7-1.89A2.06 2.06 0 0 1 12 4a2.06 2.06 0 0 1 2 2.11V8h-4zM18 19a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1v-8a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1z"/><path d="M12 12a3 3 0 1 0 3 3 3 3 0 0 0-3-3zm0 4a1 1 0 1 1 1-1 1 1 0 0 1-1 1z"/></g></g></svg>",
                      }
                    }
                  />
                </span>
              </div>
              <input
                autoComplete="new-password"
                autoFocus={false}
                className="password-input has_prepend new_size form-control"
                id="new-password"
                onChange={[Function]}
                placeholder="UserProfile.Votre nouveau mot de passe"
                readOnly={false}
                style={{}}
                type="password"
              />
              <div
                className="append input-group-append"
                onClick={[Function]}
              >
                <span>
                  <i
                    dangerouslySetInnerHTML={
                      {
                        "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-eye-outline" fill="#212121"><g data-name="Layer 2"><g data-name="eye"><rect width="24" height="24" opacity="0"/><path d="M21.87 11.5c-.64-1.11-4.16-6.68-10.14-6.5-5.53.14-8.73 5-9.6 6.5a1 1 0 0 0 0 1c.63 1.09 4 6.5 9.89 6.5h.25c5.53-.14 8.74-5 9.6-6.5a1 1 0 0 0 0-1zM12.22 17c-4.31.1-7.12-3.59-8-5 1-1.61 3.61-4.9 7.61-5 4.29-.11 7.11 3.59 8 5-1.03 1.61-3.61 4.9-7.61 5z"/><path d="M12 8.5a3.5 3.5 0 1 0 3.5 3.5A3.5 3.5 0 0 0 12 8.5zm0 5a1.5 1.5 0 1 1 1.5-1.5 1.5 1.5 0 0 1-1.5 1.5z"/></g></g></svg>",
                      }
                    }
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          {
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "marginTop": "16px",
          }
        }
      >
        <button
          className="btn validate-light"
          data-test-id="test-save-password"
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="mr-10"
          >
            <i
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24" class="eva eva-save-outline" fill="#fff"><g data-name="Layer 2"><g data-name="save"><rect width="24" height="24" opacity="0"/><path d="M20.12 8.71l-4.83-4.83A3 3 0 0 0 13.17 3H6a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3h12a3 3 0 0 0 3-3v-7.17a3 3 0 0 0-.88-2.12zM10 19v-2h4v2zm9-1a1 1 0 0 1-1 1h-2v-3a1 1 0 0 0-1-1H9a1 1 0 0 0-1 1v3H6a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h2v5a1 1 0 0 0 1 1h4a1 1 0 0 0 0-2h-3V5h3.17a1.05 1.05 0 0 1 .71.29l4.83 4.83a1 1 0 0 1 .29.71z"/></g></g></svg>",
                }
              }
            />
          </span>
          UserProfile.Enregistrer
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserProfile should render correctly when loading 1`] = `
.c2 {
  width: 160px;
  height: 160px;
  border-radius: 50%;
  background-color: #ffffff;
  margin-bottom: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 26px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  margin-bottom: 42px;
}

.c3 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 560px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c1 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 280px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c4 {
  font-weight: bold;
  font-size: 18px;
  line-height: 23px;
  margin-bottom: 8px;
  margin-top: 0px;
}

.c5 {
  font-weight: bold;
  font-size: 18px;
  line-height: 23px;
  margin-bottom: 8px;
  margin-top: 24px;
}

<div
  style={
    {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      />
      <span
        aria-busy={true}
        aria-live="polite"
      >
        <span
          className="react-loading-skeleton"
          style={
            {
              "--base-color": "#ffffff",
              "height": 20,
              "width": 160,
            }
          }
        >
          ‌
        </span>
        <br />
      </span>
    </div>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        UserProfile.votre pseudo
      </div>
      <span
        aria-busy={true}
        aria-live="polite"
      >
        <span
          className="react-loading-skeleton"
          style={
            {
              "--base-color": "#ffffff",
              "height": 50,
            }
          }
        >
          ‌
        </span>
        <br />
      </span>
      <div
        className="c5"
      >
        Register.Votre email
      </div>
      <span
        aria-busy={true}
        aria-live="polite"
      >
        <span
          className="react-loading-skeleton"
          style={
            {
              "--base-color": "#ffffff",
              "height": 50,
            }
          }
        >
          ‌
        </span>
        <br />
      </span>
      <div
        className="c5"
      >
        UserProfile.Votre mot de passe
      </div>
      <span
        aria-busy={true}
        aria-live="polite"
      >
        <span
          className="react-loading-skeleton"
          style={
            {
              "--base-color": "#ffffff",
              "height": 50,
            }
          }
        >
          ‌
        </span>
        <br />
      </span>
    </div>
  </div>
</div>
`;
